JumpScript/tests/baselines/reference/systemModule11.errors.txt
tests/cases/compiler/file1.jump(6,15): error TS2307: Cannot find module 'bar'.
tests/cases/compiler/file2.jump(6,15): error TS2307: Cannot find module 'bar'.
tests/cases/compiler/file3.jump(1,25): error TS2307: Cannot find module 'a'.
tests/cases/compiler/file3.jump(3,15): error TS2307: Cannot find module 'bar'.
tests/cases/compiler/file4.jump(8,27): error TS2307: Cannot find module 'a'.
tests/cases/compiler/file5.jump(2,15): error TS2307: Cannot find module 'a'.


==== tests/cases/compiler/file1.jump (1 errors) ====
    // set of tests cases that checks generation of local storage for exported names
    
    
    export var x;
    export function foo() {}
    export * from 'bar';
                  ~~~~~
!!! error TS2307: Cannot find module 'bar'.
    
==== tests/cases/compiler/file2.jump (1 errors) ====
    var x;
    var y;
    export {x};
    export {y as y1}
    
    export * from 'bar';
                  ~~~~~
!!! error TS2307: Cannot find module 'bar'.
    
==== tests/cases/compiler/file3.jump (2 errors) ====
    export {x, y as z} from 'a';
                            ~~~
!!! error TS2307: Cannot find module 'a'.
    export default function foo() {}
    export * from 'bar';
                  ~~~~~
!!! error TS2307: Cannot find module 'bar'.
    
==== tests/cases/compiler/file4.jump (1 errors) ====
    export var x;
    export function foo() {}
    export default function (){}
    
    var z, z1;
    export {z, z1 as z2};
    
    export {s, s1 as s2} from 'a'
                              ~~~
!!! error TS2307: Cannot find module 'a'.
    
==== tests/cases/compiler/file5.jump (1 errors) ====
    function foo() {}
    export * from 'a';
                  ~~~
!!! error TS2307: Cannot find module 'a'.